<resources>
    <string name="app_name">Collection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_button">Login</string>
    <string name="registration_button">Sign-in</string>
    <string name="registration">Registration</string>
    <string name="user_name">User Name</string>
    <string name="mail">E-Mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="wrong_message">Wrong username or password</string>
    <string name="Add_Item">Add Item</string>
    <string name="Publish">Publish</string>
    <string name="Title">Title</string>
    <string name="Create_Fail">Create Fail</string>
    <string name="Empty">Can not be empty</string>
    <string name="notConfirm">Passwords should be equal!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_beer">Beer</string>
    <string name="title_person">Person</string>
    <string name="title_settings">Settings</string>
    <string name="title_drink">Drink</string>
    <string name="title_personal">Personal</string>
    <string name="title_stats">Stats.</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user_home">UserHomeActivity</string>

    <string name="dialog_content_name">Name</string>
    <string name="dialog_content_country">Country</string>
    <string name="dialog_content_city">City</string>
    <string name="dialog_content_info">Info</string>
    <string name="dialog_content_price">Price</string>
    <string name="dialog_content_update_add_card_name">Add card name</string>
    <string name="dialog_content_update_add_card_category">Card Category</string>
    <string name="dialog_content_update_add_card_update">Update</string>
    <string name="dialog_content_update_add_card_ABV">ABV</string>
    <string name="dialog_content_update_add_card_submit">Submit</string>
    <string name="admin_panel_view_card">View Cards</string>
    <string name="admin_panel_button">Button</string>
    <string name="fragment_beer_WINE">WINE</string>
    <string name="fragment_beer_BEER">BEER</string>
    <string name="fragment_beer_COCKTAIL">COCKTAIL</string>
    <string name="fragment_general_analysis_most_tried">Most Tried</string>
    <string name="fragment_general_analysis_most_rated">Most Rated</string>
    <string name="fragment_general_analysis_most_expensive">Most Expensive</string>
    <string name="fragment_general_analysis_most_cheap">Most Cheap</string>
    <string name="fragment_training_email">Email</string>
    <string name="fragment_user_status">Status</string>
    <string name="common_textview">TextView</string>
    <string name="fragment_personal_info_new_password">New Password</string>
    <string name="fragment_personal_info_change_password">Change Password</string>
    <string name="fragment_personal_info_delete_my_account">Delete my Account</string>
    <string name="fragment_personal_info_logout">Logout</string>
    <string name="search_view_search">Search</string>
    <string name="Mililiters">Mililiters</string>
    <string name="fragment_add_card_loading">Loading</string>
    <string name="fragment_personal_profile_settings">Profile Settings</string>
    <string name="fragment_personal_profile_analystics">Analystics</string>
    <string name="fragment_personal_profile_write_us">Write Us</string>
    <string name="fragment_personal_info_password_changed">Password Changed</string>
    <string name="fragment_personal_info_delete_account">Your account deleted!</string>
    <string name="fragment_settings_please_enter_alcohol_name">Please enter alcohol name</string>
    <string name="fragment_settings_request_added">Request Added</string>
    <string name="fragment_settings_somethings_went_wrong">Somethings went wrong!</string>
    <string name="add_card_russia">Russia</string>
    <string name="add_card_european_union">European Union</string>
    <string name="add_card_america">USA</string>
</resources>