<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sezer.kirpitci.collection.ui.features.user.home.UserFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sezer.kirpitci.collection.ui.features.user.ui.beer.BeerFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sezer.kirpitci.collection.ui.features.user.ui.notifications.panel.PersonalFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.sezer.kirpitci.collection.ui.features.user.ui.generalanalysis.GeneralAnalysisFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_general_analysis" />
</navigation>