<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.user.ui.notifications.personalinfo.PersonalInfo">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <TextView
            android:id="@+id/userID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userStatus" />

        <TextView
            android:id="@+id/userMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userID" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/fragment_personal_info_new_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userMail" />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_personal_info_change_password"
            app:layout_constraintStart_toEndOf="@+id/newPassword"
            app:layout_constraintTop_toTopOf="@+id/newPassword" />

        <Button
            android:id="@+id/deleteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_personal_info_delete_my_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPassword" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_personal_info_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>