<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_red"
    tools:context=".ui.features.admin.addcard.AdminAddCardFragment"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_add_new_card_image"
        app:layout_constraintBottom_toTopOf="@+id/backgroundScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:id="@+id/backgroundScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_card_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginTextInputLayoutStyle"
        android:theme="@style/LoginTextInputLayoutStyle"
        android:textColorHint="@color/dark_gold"
        app:boxStrokeColor="@color/dark_gold"
        android:background="@color/dark_gray"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_card_name_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"

            android:hint="@string/dialog_content_update_add_card_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/LoginTextInputLayoutStyle"
        android:theme="@style/LoginTextInputLayoutStyle"
        android:textColorHint="@color/dark_gold"
        app:boxStrokeColor="@color/dark_gold"
        android:background="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_card_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_info_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:hint="@string/dialog_content_info" />
    </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/card_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/card_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Spinner
            android:id="@+id/card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/card_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Spinner
            android:id="@+id/card_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/card_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Spinner
            android:id="@+id/card_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/card_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_abv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/LoginTextInputLayoutStyle"
            android:theme="@style/LoginTextInputLayoutStyle"
            android:textColorHint="@color/dark_gold"
            app:boxStrokeColor="@color/dark_gold"
            android:background="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_abv_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:hint="@string/dialog_content_update_add_card_ABV" />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/LoginTextInputLayoutStyle"
        android:theme="@style/LoginTextInputLayoutStyle"
        android:textColorHint="@color/dark_gold"
        app:boxStrokeColor="@color/dark_gold"
        android:background="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_abv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_price_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:hint="@string/dialog_content_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_content_update_add_card_submit"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxLinear"/>
    <LinearLayout
        android:id="@+id/checkboxLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_price">
        <CheckBox
            android:id="@+id/checkboxUSA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_card_america"
            android:layout_weight="1"
            android:textColor="@color/white"/>
        <CheckBox
            android:id="@+id/checkBoxRU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_card_russia"
            android:textColor="@color/white"/>
        <CheckBox
            android:id="@+id/checkboxEU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_card_european_union"            android:layout_weight="1"

            android:textColor="@color/white"/>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
