<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.features.user.ui.generalanalysis.GeneralAnalysisFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_general_analysis_most_rated"
        android:textColor="@color/black"

        android:background="@color/dark_gold_yeni"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topBeersRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="41dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:listitem="@layout/item_user_view_card"
        tools:itemCount="1"/>

    <TextView
        android:id="@+id/mostTriedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_general_analysis_most_tried"
        android:textColor="@color/black"
        android:background="@color/dark_gold_yeni"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/topBeersRecycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mostTriedRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="41dp"
        app:layout_constraintTop_toBottomOf="@id/mostTriedText"
        tools:listitem="@layout/item_user_view_card"
        tools:itemCount="1"/>
    <TextView
        android:id="@+id/mostExpensiveText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_general_analysis_most_expensive"
        android:textColor="@color/black"
        android:background="@color/dark_gold_yeni"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/mostTriedRecycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mostExpensiveRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="41dp"
        app:layout_constraintTop_toBottomOf="@id/mostExpensiveText"
        tools:listitem="@layout/item_user_view_card"
        tools:itemCount="1"/>
    <TextView
        android:id="@+id/mostCheapText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_general_analysis_most_cheap"
        android:textColor="@color/black"
        android:background="@color/dark_gold_yeni"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/mostExpensiveRecycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mostCheapecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="41dp"
        app:layout_constraintTop_toBottomOf="@id/mostCheapText"
        tools:listitem="@layout/item_user_view_card"
        tools:itemCount="1"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>