<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.deneme.DenemFragment"
    >
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/deneme1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rowCount="3"
        app:columnCount="2"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="100dp"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#602B608A"
            >
        <LinearLayout
            android:id="@+id/lLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@android:color/transparent">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:startIconDrawable="@drawable/ic_login_email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/login" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@android:color/transparent">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        app:startIconDrawable="@drawable/ic_login_password">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loginPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:theme="@style/DenemeLoginTextColor"
                            android:hint="@string/password" />

                    </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@android:color/transparent">
                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/remember_me"
                    android:theme="@style/DenemeLoginTextColor"
                    android:checked="true"
                    android:layout_marginLeft="52dp"
                    android:layout_marginRight="6dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/loginButton2"
                android:theme="@style/Theme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>